fixed unchecked task icon not visible issue

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ ul li::before {
   height: 28px;
   width: 28px;
   border-radius: 50%;
-  background-image: url(/img/circle.png);
+  background-image: url(img/circle.png);
   background-size: cover;
   background-position: center;
   top: 14px;
